# Multi-Cloud-Security-Posture-Management

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ci.yml  codeql.yml
docs/: ADVANCED_SECURITY.md  ARCHITECTURE.md  CONFIGURATION_EXAMPLES.md  DEPLOYMENT.md  RUNBOOK.md  SECURITY_ENHANCEMENT_GUIDE.md  SECURITY_ENHANCEMENT_ROADMAP.md  VPC_CONFIGURATION.md  ZERO_TRUST_ENHANCEMENTS.md  architecture.md  deployment.md  runbook.md
infra/terraform/envs/prod/: main.tf  variables.tf
infra/terraform/envs/staging/: example.tfvars.example  main.tf
infra/terraform/modules/aws/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp/: main.tf  outputs.tf  variables.tf
splunk/: README.md  mcspm_dashboard.json
src/aws_lambda_forwarder/: handler.py
src/common/: __init__.py  config.py  data_protection.py  hec.py  incident_response.py  mappings.py  runtime_security.py
src/gcp_function_forwarder/: main.py
tests/: test_hec.py  test_hec_client.py  test_mappings.py
