[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-cloud-security-posture-management"
version = "0.1.0"
description = "AWS Security Hub and GCP SCC to Splunk HEC forwarders with Terraform IaC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MCSM Maintainers" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "requests>=2.32.0,<3",
  "pydantic>=2.8.0,<3",
  "python-json-logger>=2.0.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
  "pytest-cov>=5.0.0,<6",
  "mypy>=1.11.0,<2",
  "ruff>=0.6.2,<1",
  "black>=24.8.0",
  "types-requests",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "S", "PL"]
ignore = ["S311"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
